swagger bearer token setup and minor changes to swagger documentation
